[workspace]
members = [".", "dro2opb", "opb2vgm", "vgm2opb", "dro2vgm"]

[package]
name = "opbinary"
version = "0.1.0"
description = "OPL Binary Music Format data parser and writer"
edition = "2021"
exclude = ["dro2opb", "opb2vgm", "vgm2opb"]

[features]
default = ["std"]
std = ["snafu/std", "snafu/backtrace"]

[dependencies.snafu]
version = "0.8.2"
default-features = false
features = ["rust_1_61", "rust_1_65"]
